Fix spacing between pinned tabs and normal tabs

--- a/userChrome.css
+++ b/userChrome.css
@@ -173,3 +173,10 @@ toolbar#nav-bar {
 #urlbar-input::selection {
     background-color: var(--prim-dark) !important;
 }
+
+/* Removes spacing between pinned tabs and normal tabs */
+#tabbrowser-tabs[haspinnedtabs]:not([positionpinnedtabs])[orient="horizontal"]
+> #tabbrowser-arrowscrollbox
+> .tabbrowser-tab:nth-child(1 of :not([pinned], [hidden])) {
+    margin-inline-start: 0 !important;
+}
